tests/invalid_combo.ryze
[ Q Q QQ ] DBL R
Q DBL
